--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;">
   <link rel="stylesheet" href="main.css">
   <title>HTML Portfolio</title>
 </head>
+
 <body>
+  <div class="container">
+    <div class="header">
+      <h1>Azucena Zhou</h1>
+      <h2>Actress / Content Creator / Web Developer</h2>
+    </div>
 
-  Welcome to the HTML Portfolio Project
-
+    <div class="tagline">
+      <h3>This is me</h3>
+      <p>From a very youg age, I have had this burning passion for creating and expressing myself in many different ways. However,
+        I did't know it was a necessity. Now that I am 18, I have come to realize that my art feeds my soul. Therefore, I
+        do what I do. <br>I've been told that following your passion is not a good advice... fortunately I have always followed
+        nothing but love. So hopefully I can serve you as an inspiration.</br>
+      </p>
+    </div>
+    <div class="skills">
+      <h3>What I do</h3>
+      <p>I enjoy writing front-end code with these technologies</p>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+      </ul>
+    </div>
+    <div class="contact">
+      <h3>Let's keep in touch!</h3>
+      <p>Follow me on <a href="https://www.instagram.com/azu.zhou/" target="_blank">Instagram</a></p>
+    </div>
+  </div>
 </body>
+
 </html>
